# residualself

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
residualself/: __init__.py  auth.py  cli.py  config.py  github_client.py  models.py  queue.py  session.py  store.py
residualself/ui/: __init__.py  app.py  card.py  park_modal.py  session_bar.py  session_modal.py
tests/: test_app.py  test_github_client.py  test_queue.py  test_session.py  test_store.py
tools/: make_demo_screenshot.py
