[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "residualself"
version = "0.1.0"
description = "An ADHD-first, single-focus GitHub work-queue TUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Abimael Santos Castillo" }]
keywords = ["github", "tui", "textual", "adhd", "productivity", "notifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.60",
    "httpx>=0.27",
    "keyring>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Abimael10/residualself"
Repository = "https://github.com/Abimael10/residualself"
Issues = "https://github.com/Abimael10/residualself/issues"

[project.scripts]
residualself = "residualself.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["residualself"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
